// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "47c41516982f533a73bd8611884766d8a76a72f8ed7fd9fe143ac6432ae48371",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "364a384172b3d684fa51700c86f773516e3dc96c586476baffd90795a9eadb71",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "3fdbf63db45d5505f57271f55cd864fa9c7094c1cb33c995ec052547e1152005",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "2d719e74dff8aaec6e30c8e016f66e1a149a8cd8db21e65b597a7c11dda41cd6",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "7a62c3ac323e50344003d50ad3cb754803f78fdd739be70e20779addd6bff564",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "6113ec20e9a47547f4e12db480cc4bbcf142eda860bac8bb8f481a3ccc334590",
  "floor": 10,
  "status": "won",
  "turn": 885,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "133e86a84c63c96bd7b5b14acaaa4e4b5ea6fbee318b4519011512f696abda8a",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "3a98fb54525f4a76a021a369c3ac4196e9e4eb023438e771c4b1f1e571778aca",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "5b7d5a9253216aa7c406f77b6cf5a814b5fe048f612215b8c97200367627c4b4",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "5852d4e82901f21a6cd40d5473f212e2f5639e63ef0f36b4a0e9c24876a82f92",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "3e1f4e451961e2f4d8ebbcd1d72d36da4f152507eb07d79710384fc76472bf70",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "6c60f839b96cf70bb0b5434f78308b3d1e0405cb0c8c36cb88080a5f530ec3d3",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "fd75fcc12d8bd6a5d744f2d0c15989051598ea0e718c57bc29f88d5a86f5a32e",
  "floor": 10,
  "status": "won",
  "turn": 864,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "97c8f7bedcefd9333cb40bce39674c8cdd642453327e77d7843c251c872b670c",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;
